# adk-agents-cabral

./: .gcloudignore  .gitignore  README.md  skills-lock.json  update_references.sh
.agents/skills/adk-agent-engine-gotchas/: SKILL.md
.agents/skills/adk-global-gemini-fix/: SKILL.md
.claude/skills/: adk-agent-engine-gotchas  adk-global-gemini-fix
a2a-demo-ptbr/: LESSONS.md  README.md  deploy.sh  undeploy.sh
a2a-demo-ptbr/a2a-pdf-analyzer/: Dockerfile  README.md  deployment_metadata.json  pyproject.toml
a2a-demo-ptbr/a2a-pdf-analyzer/analisador_contratos/: agent.json  agent.py  agent_runtime_app.py  fast_api_app.py
a2a-demo-ptbr/a2a-pdf-root/: GEMINI.md  README.md  deployment_metadata.json  pyproject.toml
adk_custom_connector/: .env.template  Makefile  README.md  deployment_metadata.json  pyproject.toml  requirements.txt  run_agent.py
adk_custom_connector/app/: agent.py  tools.py
adk_custom_connector/app/app_utils/: deploy.py  telemetry.py  typing.py
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
data-agent/: .env.template  GEMINI.md  Makefile  README.md  deployment_metadata.json  fix_engine.py  iam_policy.json  pyproject.toml  test_data_agent.py  test_imports.py  test_model.py  test_session_creation.py  test_session_creation2.py  update_app.py
data-agent-v2/: README.md  deployment_metadata.json  pyproject.toml
data-agent-v2/app/: agent.py  agent_engine_app.py
data-agent/app/: agent.py  agent_engine_app.py
external_oauth_agent/: .env.template  Dockerfile  Dockerfile.api  README.md  pyproject.toml  requirements.txt  run_agent.py
external_oauth_agent/api_server/: main.py  requirements.txt
external_oauth_agent/app/: agent.py  api.py  tools.py
joke-agent/: Makefile  README.md  deployment_metadata.json  pyproject.toml
joke-agent/app/: agent.py  agent_engine_app.py
live_api_pizza/: ARCHITECTURE_AND_LESSONS.md
live_api_pizza/backend/: Dockerfile  api_server.py  pyproject.toml  run_agent.py
live_api_pizza/frontend/: .dockerignore  .firebaserc  .gitignore
visual_pizza_agent/: ARCHITECTURE_AND_LESSONS.md
visual_pizza_agent/backend/: .env.template  api_server.py  pyproject.toml  run_agent.py
visual_pizza_agent/backend/app/: agent.py  tools.py
visual_pizza_agent/frontend/: .gcloudignore  Dockerfile  firebase.json  nginx.conf  package-lock.json  package.json
(+39 files in other folders)
