[project]
name = "external-oauth-agent"
version = "0.1.0"
description = "A Google ADK Python agent demonstrating external OAuth/OIDC tool authentication."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "requests",
    "pyjwt",
    "opentelemetry-instrumentation-google-genai>=0.7b0",
]

[tool.uv]
package = false
